<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimaryDark"

        android:layout_gravity="center_vertical">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"
            android:src="@drawable/back"
            android:background="#0000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/about"
            android:textSize="20sp"
            android:textColor="#ffffff"/>
        <ImageButton
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingRight="20dp"
            android:paddingLeft="10dp"
            android:layout_centerVertical="true"
            android:src="@drawable/email"
            android:background="#0000"/>

        <ImageButton
            android:id="@+id/github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/email"
            android:paddingLeft="10dp"
            android:src="@drawable/github"
            android:background="#0000"/>

    </RelativeLayout>
    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"
        android:src="@drawable/shayn_logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/about_me"/>
    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="2dp"
        android:layout_gravity="center_horizontal"
        android:background="#D9D9D9"></LinearLayout>

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/about_app"/>
</LinearLayout>
